<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_android5introduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_android5introduce" />
    <Button
        android:id="@+id/btn_android5api1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_android5introduce"
        android:text="@string/text_android5api1"
        android:textAllCaps="false"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/btn_android5api2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_android5api1"
        android:text="@string/text_android5api2"
        android:textAllCaps="false"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/btn_android5api3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_android5api2"
        android:text="@string/text_android5api3"
        android:textAllCaps="false"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/btn_android5api4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_android5api3"
        android:text="@string/text_android5api4"
        android:textAllCaps="false"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/btn_android5api5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_android5api4"
        android:text="@string/text_android5api5"
        android:textAllCaps="false"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/btn_android5api6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_android5api5"
        android:text="@string/text_android5api6"
        android:textAllCaps="false"
        android:onClick="onClick"/>
</RelativeLayout>
</ScrollView>