<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".newapi1.ActivityTransitionsActivity">

    <Button
        android:id="@+id/btn_explode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_explode"
        android:textAllCaps="false"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btn_slide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_explode"
        android:text="@string/text_slide"
        android:textAllCaps="false"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btn_fade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_slide"
        android:text="@string/text_fade"
        android:textAllCaps="false"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btn_sharedelements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_fade"
        android:text="@string/text_sharedelements"
        android:textAllCaps="false"
        android:onClick="onClick"/>

    <TextView
        android:id="@+id/tv_share"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="70dp"
        android:layout_below="@+id/btn_sharedelements"
        android:elevation="8dp"
        android:padding="10dp"
        android:transitionName="shareName"
        android:text="@string/text_share"
        android:textColor="#ffffff"
        android:background="#330033"/>
</RelativeLayout>
