<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.diygreen.android5.SetClipToOutlineActivity">

    <ImageView
        android:id="@+id/view_test1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#330099"/>
    <Button
        android:id="@+id/btn_clip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_test1"
        android:text="@string/text_clip1"
        android:textAllCaps="false"
        android:onClick="onClick"/>

    <View
        android:id="@+id/view_test2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="#009900"
        android:layout_toRightOf="@+id/view_test1"/>
    <Button
        android:id="@+id/btn_clip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_test2"
        android:layout_alignLeft="@+id/view_test2"
        android:text="@string/text_clip2"
        android:textAllCaps="false"
        android:onClick="onClick"/>


    <View
        android:id="@+id/view_test3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="#330000"
        android:layout_toRightOf="@+id/view_test2"/>
    <Button
        android:id="@+id/btn_clip3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_test3"
        android:layout_alignLeft="@+id/view_test3"
        android:text="@string/text_clip3"
        android:textAllCaps="false"
        android:onClick="onClick"/>

</RelativeLayout>
