<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.diygreen.android5.ElevationTranslationZActivity">

    <TextView
        android:id="@+id/tv_testeleavation1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:elevation="0dp"
        android:gravity="center"
        android:text="@string/text_0dp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@drawable/bg_text"/>
    <TextView
        android:id="@+id/tv_testeleavation2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_toRightOf="@+id/tv_testeleavation1"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:elevation="15dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/text_15dp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@drawable/bg_text"/>
    <TextView
        android:id="@+id/tv_testeleavation3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_toRightOf="@+id/tv_testeleavation2"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:elevation="30dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/text_30dp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@drawable/bg_text"/>
    <TextView
        android:id="@+id/tv_testeleavation4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_toRightOf="@+id/tv_testeleavation3"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:elevation="45dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/text_45dp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@drawable/bg_text"/>

    <View
        android:id="@+id/view_test1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="#00ff00"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:onClick="onClick"/>
    <View
        android:id="@+id/view_test2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_toRightOf="@+id/view_test1"
        android:layout_marginLeft="-15dp"
        android:background="#ff0000"
        android:layout_centerInParent="true"/>

    <View
        android:id="@+id/view_test3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="50dp"
        android:translationZ="20dp"
        android:background="#ff00ff"/>
    <View
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_toLeftOf="@+id/view_test3"
        android:layout_alignBottom="@+id/view_test3"
        android:translationZ="0dp"
        android:background="#000000"/>

</RelativeLayout>
