<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_test1_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_test1_tip"/>
    <!-- src + tint 演示-->
    <ImageView
        android:id="@+id/iv_test1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/tv_test1_tip"
        android:src="@mipmap/ic_tint_demo"/>
    <ImageView
        android:id="@+id/iv_test2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/tv_test1_tip"
        android:layout_toRightOf="@+id/iv_test1"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:src="@mipmap/ic_tint_demo"
        android:tint="#2C3E50"/>
    <ImageView
        android:id="@+id/iv_test3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/tv_test1_tip"
        android:layout_toRightOf="@+id/iv_test2"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:src="@mipmap/ic_tint_demo"
        android:tint="#ffcc00"/>

    <TextView
        android:id="@+id/tv_test2_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_test1"
        android:text="@string/text_test2_tip"/>
    <!-- background + backgroundTint 演示-->
    <ImageView
        android:id="@+id/iv_test4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/tv_test2_tip"
        android:src="@mipmap/ic_tint_demo"/>
    <ImageView
        android:id="@+id/iv_test5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_toRightOf="@+id/iv_test4"
        android:layout_below="@+id/tv_test2_tip"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@mipmap/ic_tint_demo"
        android:backgroundTint="#6633ff"/>
    <ImageView
        android:id="@+id/iv_test6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_toRightOf="@+id/iv_test5"
        android:layout_below="@+id/tv_test2_tip"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@mipmap/ic_tint_demo"
        android:backgroundTint="#00ff33"/>

    <TextView
        android:id="@+id/tv_test3_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_test4"
        android:text="@string/text_test3_tip"/>
    <!-- src/background + foregroundTint 演示-->
    <ImageView
        android:id="@+id/iv_test7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/tv_test3_tip"
        android:src="@mipmap/ic_tint_demo"/>
    <ImageView
        android:id="@+id/iv_test8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_toRightOf="@+id/iv_test7"
        android:layout_below="@+id/tv_test3_tip"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:src="@mipmap/ic_tint_demo"
        android:foregroundTint="#6633ff"/>
    <ImageView
        android:id="@+id/iv_test9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_toRightOf="@+id/iv_test8"
        android:layout_below="@+id/tv_test3_tip"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@mipmap/ic_tint_demo"
        android:foregroundTint="#00ff33"/>

    <TextView
        android:id="@+id/tv_test4_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_test7"
        android:text="@string/text_test4_tip"/>
    <!-- src/background + drawableTint 演示-->
    <ImageView
        android:id="@+id/iv_test10"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/tv_test4_tip"
        android:src="@mipmap/ic_tint_demo"/>
    <ImageView
        android:id="@+id/iv_test11"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_toRightOf="@+id/iv_test10"
        android:layout_below="@+id/tv_test4_tip"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:src="@mipmap/ic_tint_demo"
        android:tint="#993333"
        android:drawableTint="#6633ff"/>
    <ImageView
        android:id="@+id/iv_test12"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_toRightOf="@+id/iv_test11"
        android:layout_below="@+id/tv_test4_tip"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@mipmap/ic_tint_demo"
        android:tint="#ccff00"
        android:drawableTint="#00ff33"/>

</RelativeLayout>
